Explain the error in 42:9.3 concerning periodic table

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -125,7 +125,7 @@
 \usection{Natural Philosophy}
 \vs p042 9:1 Religion is not alone dogmatic; natural philosophy equally tends to dogmatize. When a renowned religious teacher reasoned that the number 7 was fundamental to nature because there are 7 openings in the human head, if he had known more of chemistry, he might have advocated such a belief founded on a true phenomenon of the physical world. There is in all the physical universes of time and space, notwithstanding the universal manifestation of the decimal constitution of energy, the ever\hyp{}present reminder of the reality of the sevenfold electronic organization of prematter.
 \vs p042 9:2 The number 7 is basic to the central universe and the spiritual system of inherent transmissions of character, but the number 10, the decimal system, is inherent in energy, matter, and the material creation. Nevertheless the atomic world does display a certain periodic characterization which recurs in groups of 7 --- a birthmark carried by this material world indicative of its far\hyp{}distant spiritual origin.
-\vs p042 9:3 This sevenfold persistence of creative constitution is exhibited in the chemical domains as a recurrence of similar physical and chemical properties in segregated periods of 7 when the basic elements are arranged in the order of their atomic weights. When the Urantia chemical elements are thus arranged in a row, any given quality or property tends to recur by sevens. This periodic change by sevens recurs diminishingly and with variations throughout the entire chemical table, being most markedly observable in the earlier or lighter atomic groupings. Starting from any one element, after noting some one property, such a quality will change for six consecutive elements, but on reaching the eighth, it tends to reappear, that is, the eighth chemically active element resembles the first, the ninth the second, and so on. Such a fact of the physical world unmistakably points to the sevenfold constitution of ancestral energy and is indicative of the fundamental reality of the sevenfold diversity of the creations of time and space. Man should also note that there are 7 colours in the natural spectrum.
+\vs p042 9:3 This sevenfold persistence of creative constitution is exhibited in the chemical domains as a recurrence of similar physical and chemical properties in segregated periods of 7 when the basic elements are arranged in the order of their atomic weights. When the Urantia chemical elements are thus arranged in a row, any given quality or property tends to recur by sevens. This periodic change by sevens recurs diminishingly and with variations throughout the entire chemical table, being most markedly observable in the earlier or lighter atomic groupings. Starting from any one element, after noting some one property, such a quality will change for six consecutive elements, but on reaching the eighth, it tends to reappear, that is, the eighth chemically active element resembles the first, the ninth the second, and so on\fnst{Such a simple chemical periodicity was only true until the discovery of inert gases (Newlands, 1864, not Ramsay, as is commonly supposed), when the true ``octaves'' in the musical sense were replaced with the periods of eight, whereby the \bibemph{ninth} element resembled the first, the \bibemph{tenth} the second, and so on. However, even this periodicity was not strict, because after the two \bibemph{small} periods of \bibemph{eight} there appeared two periods of \bibemph{eighteen,} followed by two periods of \bibemph{thirty\hyp{}two}. This pattern $2,8,8,18,18,32,32$ was only explained within the framework of Quantum Mechanics using Pauli's Principle for electron configurations in the late 1920s. At the time of synthesis of the Fifth Epochal Revelation the Quantum Mechanics was not yet popularised and so remained unknown, except by the few ``Founding Fathers'' thereof. Thus it could not have been used in the Fifth Epochal Revelation, which was produced as a response to questions by a medical doctor (Dr~William Sadler) and other people, among whom there were apparently no actively working theoretical physicists. For more information see Chapter~III of the excellent monograph ``Atomic Structure and Spectral Lines'' (1934) by A.~Sommerfeld \cite{Sommerfeld1}.}. Such a fact of the physical world unmistakably points to the sevenfold constitution of ancestral energy and is indicative of the fundamental reality of the sevenfold diversity of the creations of time and space. Man should also note that there are 7 colours in the natural spectrum.
 \vs p042 9:4 But not all the suppositions of natural philosophy are valid; for example, the hypothetical ether, which represents an ingenious attempt of man to unify his ignorance of space phenomena. The philosophy of the universe cannot be predicated on the observations of so\hyp{}called science. If such a metamorphosis could not be seen, a scientist would be inclined to deny the possibility of developing a butterfly out of a caterpillar.
 \vs p042 9:5 Physical stability associated with biologic elasticity is present in nature only because of the well\hyp{}nigh infinite wisdom possessed by the Master Architects of creation. Nothing less than transcendental wisdom could ever design units of matter which are at the same time so stable and so efficiently flexible.
 \usection{Universal Nonspiritual Energy Systems\\(\subtitlefont Material Mind Systems)}
@@ -186,5 +186,9 @@ W.F.G.~Swann.
 F.J.~Dyson
 {\em Phys. Rev.}
 {85, 631}, 1952.
+\bibitem{Sommerfeld1}
+Arnold Sommerfeld
+{``Atomic Structure and Spectral Lines''.}
+{New York E.P. Dutton and Company Inc.}, 1934.
 \end{thebibliography}
 }
