--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -16,8 +16,8 @@
 \vs p041 0:4 Such is the constitution of the local star cloud of Nebadon, which today swings in an increasingly settled orbit about the Sagittarius centre of that minor sector of Orvonton to which our local creation belongs.
 \usection{The Nebadon Power Centres}
 \vs p041 1:1 The spiral and other nebulae, the mother wheels of the spheres of space, are initiated by Paradise force organizers; and following nebular evolution of gravity response, they are superseded in superuniverse function by the power centres and physical controllers, who thereupon assume full responsibility for directing the physical evolution of the ensuing generations of stellar and planetary offspring. This physical supervision of the Nebadon preuniverse was, upon the arrival of our Creator Son, immediately co\hyp{}ordinated with his plan for universe organization. Within the domain of this Paradise Son of God,\fnst{In 1995 text no comma after ``God''.} the Supreme Power Centres and the Master Physical Controllers collaborated with the later appearing Morontia Power Supervisors and others to produce that vast complex of communication lines, energy circuits, and power lanes which firmly bind the manifold space bodies of Nebadon into one integrated administrative unit.
-\vs p041 1:2 100 Supreme Power Centres of the fourth order are permanently assigned to our local universe. These beings receive the incoming lines of power from the third\hyp{}order centres of Uversa and relay the down\hyp{}stepped and modified circuits to the power centres of our constellations and systems. These power centres, in association, function to produce the living system of control and equalization which operates to maintain the balance and distribution of otherwise fluctuating and variable energies. Power centres are not, however, concerned with transient and local energy upheavals, such as sun spots and system electric disturbances; light and electricity are not the basic energies of space; they are secondary and subsidiary manifestations.
-\vs p041 1:3 The 100 local universe centres are stationed on Salvington, where they function at the exact energy centre of that sphere. Architectural spheres, such as Salvington, Edentia, and Jerusem, are lighted, heated, and energized by methods which make them quite independent of the suns of space. These spheres were constructed --- made to order --- by the power centres and physical controllers and were designed to exert a powerful influence over energy distribution. Basing their activities on such focal points of energy control, the power centres, by their living presences, directionize and channelize the physical energies of space. And these energy circuits are basic to all physical\hyp{}material and morontia\hyp{}spiritual phenomena.
+\vs p041 1:2 One hundred Supreme Power Centres of the fourth order are permanently assigned to our local universe. These beings receive the incoming lines of power from the third\hyp{}order centres of Uversa and relay the down\hyp{}stepped and modified circuits to the power centres of our constellations and systems. These power centres, in association, function to produce the living system of control and equalization which operates to maintain the balance and distribution of otherwise fluctuating and variable energies. Power centres are not, however, concerned with transient and local energy upheavals, such as sun spots and system electric disturbances; light and electricity are not the basic energies of space; they are secondary and subsidiary manifestations.
+\vs p041 1:3 The one hundred local universe centres are stationed on Salvington, where they function at the exact energy centre of that sphere. Architectural spheres, such as Salvington, Edentia, and Jerusem, are lighted, heated, and energized by methods which make them quite independent of the suns of space. These spheres were constructed --- made to order --- by the power centres and physical controllers and were designed to exert a powerful influence over energy distribution. Basing their activities on such focal points of energy control, the power centres, by their living presences, directionize and channelize the physical energies of space. And these energy circuits are basic to all physical\hyp{}material and morontia\hyp{}spiritual phenomena.
 \vs p041 1:4 10 Supreme Power Centres of the fifth order are assigned to each of Nebadon’s primary subdivisions, the 100 constellations. In Norlatiadek, your constellation, they are not stationed on the headquarters sphere but are situated at the centre of the enormous stellar system which constitutes the physical core of the constellation. On Edentia there are 10 associated mechanical controllers and 10 frandalanks who are in perfect and constant liaison with the near\hyp{}by power centres.
 \vs p041 1:5 One Supreme Power Centre of the sixth order is stationed at the exact gravity focus of each local system. In the system of Satania the assigned power centre occupies a dark island of space located at the astronomic centre of the system. Many of these dark islands are vast dynamos which mobilize and directionize certain space\hyp{}energies, and these natural circumstances are effectively utilized by the Satania Power Centre, whose living mass functions as a liaison with the higher centres, directing the streams of more materialized power to the Master Physical Controllers on the evolutionary planets of space.
 \usection{The Satania Physical Controllers}
