--- a/tex/p068.tex
+++ b/tex/p068.tex
@@ -13,7 +13,7 @@
 \vs p068 1:1 When brought closely together, men often learn to like one another, but primitive man was not naturally overflowing with the spirit of brotherly feeling and the desire for social contact with his fellows. Rather did the early races learn by sad experience that “in union there is strength”; and it is this lack of natural brotherly attraction that now stands in the way of immediate realization of the brotherhood of man on Urantia.
 \vs p068 1:2 Association early became the price of survival. The lone man was helpless unless he bore a tribal mark which testified that he belonged to a group which would certainly avenge any assault made upon him. Even in the days of Cain it was fatal to go abroad alone without some mark of group association. Civilization has become man’s insurance against violent death, while the premiums are paid by submission to society’s numerous law demands.
 \vs p068 1:3 Primitive society was thus founded on the reciprocity of necessity and on the enhanced safety of association. And human society has evolved in agelong cycles as a result of this isolation fear and by means of reluctant co\hyp{}operation.
-\vs p068 1:4 \pc Primitive human beings early learned that groups are vastly greater and stronger than the mere sum of their individual units. 100 men united and working in unison can move a great stone; a score of well\hyp{}trained guardians of the peace can restrain an angry mob. And so society was born, not of mere association of numbers, but rather as a result of the \bibemph{organization} of intelligent co\hyp{}operators. But co\hyp{}operation is not a natural trait of man; he learns to co\hyp{}operate first through fear and then later because he discovers it is most beneficial in meeting the difficulties of time and guarding against the supposed perils of eternity.
+\vs p068 1:4 \pc Primitive human beings early learned that groups are vastly greater and stronger than the mere sum of their individual units. One hundred men united and working in unison can move a great stone; a score of well\hyp{}trained guardians of the peace can restrain an angry mob. And so society was born, not of mere association of numbers, but rather as a result of the \bibemph{organization} of intelligent co\hyp{}operators. But co\hyp{}operation is not a natural trait of man; he learns to co\hyp{}operate first through fear and then later because he discovers it is most beneficial in meeting the difficulties of time and guarding against the supposed perils of eternity.
 \vs p068 1:5 The peoples who thus early organized themselves into a primitive society became more successful in their attacks on nature as well as in defence against their fellows; they possessed greater survival possibilities; hence has civilization steadily progressed on Urantia, notwithstanding its many setbacks. And it is only because of the enhancement of survival value in association that man’s many blunders have thus far failed to stop or destroy human civilization.
 \vs p068 1:6 \pc That contemporary cultural society is a rather recent phenomenon is well shown by the present\hyp{}day survival of such primitive social conditions as characterize the Australian natives and the Bushmen and Pygmies of Africa. Among these backward peoples may be observed something of the early group hostility, personal suspicion, and other highly antisocial traits which were so characteristic of all primitive races. These miserable remnants of the nonsocial peoples of ancient times bear eloquent testimony to the fact that the natural individualistic tendency of man cannot successfully compete with the more potent and powerful organizations and associations of social progression. These backward and suspicious antisocial races that speak a different dialect every 60--80\,km illustrate what a world you might now be living in but for the combined teaching of the corporeal staff of the Planetary Prince and the later labours of the Adamic group of racial uplifters.
 \vs p068 1:7 The modern phrase, “back to nature,” is a delusion of ignorance, a belief in the reality of the onetime fictitious “golden age.” The only basis for the legend of the golden age is the historic fact of Dalamatia and Eden. But these improved societies were far from the realization of utopian dreams.
